# HiEvNet

./: .gitignore  CLAUDE.md  clean_cache.sh  pyproject.toml
EDA/: eda_pannuke.py
HUN/data/EDA/: eda_consep.py  eda_segpath.py
docs/: data.typ  project.md
gt_generation/: pannuke_gt.py
gt_generation/utils/: pannuke.py
hievnet/data/EDA/: eda_consep.py  eda_monusac.py  eda_pannuke.py  eda_panoptils.py
hievnet/data/ETL/: __init__.py  config.py
hievnet/data/etl/: __init__.py  config.py  etl_schema.yaml  ingestors.py
hievnet/data/etl/ingestors/: __init__.py  _base.py  csv_poly_ingestor.py  geojson_ingestor.py  mat_inst_ingestor.py  parquet_ingestor.py
hievnet/data/etl/ops/: __init__.py  convert.py  iou.py  loss.py
hievnet/data/etl/transform/: spatialChunker.py
hievnet/data/etl/utils/: __init__.py
main/: data_ratio.py  dataset.yaml  debug_fold1-00000-of-00001_roi_0.npz  debug_test-00000-of-00001_roi_0.npz  test.py  test_ETL.py  test_ingestion.py  test_panoptils.py
